// Flashsale means a time-limited promotion that is scheduled to start and end at specific times.
// Voucher same as Flashsale, but not having scheduled routine

enum PromotionType {
  Discount
  Bundle
  BuyXGetY
  Cashback

  @@map("type")
  @@schema("promotion")
}

enum PromotionRefType {
  All // All products, the entire product catalog is being promoted
  ProductSpu // Product SPU, the specific product that is being promoted
  ProductSku // Product SKU, the specific SKU of the product that is being promoted
  Category // Category, the category of products that are being promoted
  Brand // Brand, the brand of products that are being promoted

  @@map("ref_type")
  @@schema("promotion")
}

model Promotion {
  id       BigInt           @id @default(autoincrement())
  code     String           @unique
  owner_id BigInt? // null means system promotion
  ref_type PromotionRefType // Type of reference
  ref_id   BigInt? // Reference id, e.g. product id, category id | null when ref_type is All

  type        PromotionType // Type of promotion
  title       String // Title of the promotion
  description String? // Description of the promotion
  is_active   Boolean // Vendor can activate/deactivate the promotion
  auto_apply  Boolean // true means the promotion is automatically applied when conditions are met, false means a code is required

  // date_started and date_ended is the scheduled time for the promotion to be active (override the schedules)
  date_started DateTime  @db.Timestamptz(3)
  date_ended   DateTime? @db.Timestamptz(3)

  date_created DateTime @default(now()) @db.Timestamptz(3)
  date_updated DateTime @default(now()) @updatedAt @db.Timestamptz(3)

  vendor    Vendor?             @relation(fields: [owner_id], references: [id], onUpdate: Cascade, onDelete: SetNull)
  discounts PromotionDiscount[]
  schedules PromotionSchedule[]

  @@map("base")
  @@schema("promotion")
}

model PromotionSchedule {
  id           BigInt @id @default(autoincrement())
  promotion_id BigInt
  timezone     String // Timezone for the schedule, e.g., "America/New_York"
  cron_rule    String // (e.g., "0 9 * * 1" for every Monday 9AM)
  duration     Int // in minutes, e.g., 60 for 1 hour

  next_run_at DateTime? @db.Timestamptz(3)
  last_run_at DateTime? @db.Timestamptz(3)

  promotion Promotion @relation(fields: [promotion_id], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@map("schedule")
  @@schema("promotion")
}

model PromotionDiscount {
  id BigInt @id

  order_wide       Boolean // true means the discount applies only to the total order amount, false means it applies to each item
  min_spend        BigInt // Minimum spend to apply this sale, 0 means applied immediately
  max_discount     BigInt // Maximum discount amount (fixed price), 0 means no limit
  discount_percent Int? // either discount_percent or discount_price
  discount_price   BigInt?

  promotion Promotion @relation(fields: [id], references: [id], onUpdate: Cascade, onDelete: Cascade)

  @@map("discount")
  @@schema("promotion")
}
