//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id BigInt [pk, increment]
  type AccountType [not null]
  status AccountStatus [not null, default: 'Active']
  phone String [unique]
  email String [unique]
  username String [unique]
  password String
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Profile {
  id BigInt [pk]
  gender Gender
  name String
  date_of_birth DateTime
  avatar_rs_id BigInt [unique]
  email_verified Boolean [not null, default: false]
  phone_verified Boolean [not null, default: false]
  default_contact_id BigInt [unique]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Customer {
  id BigInt [pk]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Vendor {
  id BigInt [pk]
  description String [not null, default: '']
}

Table IncomeHistory {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  type String [not null]
  income BigInt [not null]
  current_balance BigInt [not null]
  note String
  date_created DateTime [default: `now()`, not null]
  hash Bytes [unique, not null]
  prev_hash Bytes [not null]
}

Table Notification {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  type String [not null]
  channel String [not null]
  is_read Boolean [not null, default: false]
  content String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
  date_sent DateTime
  date_scheduled DateTime
}

Table CartItem {
  id BigInt [pk, increment]
  cart_id BigInt [not null]
  sku_id BigInt [not null]
  quantity BigInt [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]

  indexes {
    (cart_id, sku_id) [unique]
  }
}

Table Contact {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  full_name String [not null]
  phone String [not null]
  phone_verified Boolean [not null, default: false]
  address String [not null]
  address_type AddressType [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Interaction {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  session_id String
  event_type String [not null]
  ref_type InteractionRefType [not null]
  ref_id BigInt [not null]
  metadata Json
  user_agent String
  ip_address String
  date_created DateTime [default: `now()`, not null]
}

Table Brand {
  id BigInt [pk, increment]
  code String [unique, not null]
  name String [not null]
  description String [not null]
}

Table ProductCategory {
  id BigInt [pk, increment]
  name String [unique, not null]
  description String [not null]
  parent_id BigInt
}

Table ProductSpu {
  id BigInt [pk, increment]
  code String [unique, not null]
  account_id BigInt [not null]
  category_id BigInt [not null]
  brand_id BigInt [not null]
  featured_sku_id BigInt [unique]
  name String [not null]
  description String [not null]
  is_active Boolean [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
  date_deleted DateTime
}

Table ProductSku {
  id BigInt [pk, increment]
  spu_id BigInt [not null]
  price BigInt [not null]
  can_combine Boolean [not null]
  attributes Json [not null]
  date_created DateTime [default: `now()`, not null]
  date_deleted DateTime
}

Table Tag {
  id BigInt [pk, increment]
  tag String [unique, not null]
  description String [not null]
}

Table ProductTag {
  id BigInt [pk, increment]
  spu_id BigInt [not null]
  tag_id BigInt [not null]

  indexes {
    (spu_id, tag_id) [unique]
  }
}

Table Comment {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  ref_type CommentRefType [not null]
  ref_id BigInt [not null]
  body String [not null]
  upvote BigInt [not null, default: 0]
  downvote BigInt [not null, default: 0]
  score Int [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table ProductSerial {
  id BigInt [pk, increment]
  serial_number String [unique, not null]
  sku_id BigInt [not null]
  status ProductStatus [not null, default: 'Active']
  date_created DateTime [default: `now()`, not null]
}

Table Stock {
  id BigInt [pk, increment]
  ref_type StockRefType [not null]
  ref_id BigInt [not null]
  current_stock BigInt [not null, default: 0]
  sold BigInt [not null, default: 0]
  date_created DateTime [default: `now()`, not null]

  indexes {
    (ref_id, ref_type) [unique]
  }
}

Table StockHistory {
  id BigInt [pk, increment]
  stock_id BigInt [not null]
  change BigInt [not null]
  date_created DateTime [default: `now()`, not null]
}

Table Order {
  id BigInt [pk, increment]
  account_id BigInt [not null]
  payment_option String [not null]
  payment_status Status [not null, default: 'Pending']
  address String [not null]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table OrderItem {
  id BigInt [pk, increment]
  order_id BigInt [not null]
  sku_id BigInt [not null]
  confirmed_by_id BigInt
  shipment_id BigInt [not null]
  note String [not null]
  status Status [not null, default: 'Pending']
  quantity BigInt [not null]
}

Table OrderItemSerial {
  id BigInt [pk, increment]
  order_item_id BigInt [not null]
  product_serial_id BigInt [not null]

  indexes {
    (order_item_id, product_serial_id) [unique]
  }
}

Table Refund {
  id BigInt [pk, increment]
  order_item_id BigInt [not null]
  reviewed_by_id BigInt
  shipment_id BigInt
  method RefundMethod [not null]
  status Status [not null, default: 'Pending']
  reason String [not null]
  address String
  date_created DateTime [default: `now()`, not null]
}

Table RefundDispute {
  id BigInt [pk, increment]
  refund_id BigInt [not null]
  issued_by_id BigInt [not null]
  reason String [not null]
  status Status [not null, default: 'Pending']
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table Invoice {
  id BigInt [pk, increment]
  ref_type InvoiceRefType [not null]
  ref_id BigInt [not null]
  type InvoiceType [not null]
  receiver_id BigInt [not null]
  note String
  data Json [not null]
  file_rs_id String [not null]
  date_created DateTime [default: `now()`, not null]
  hash Bytes [unique, not null]
  prev_hash Bytes [not null]
}

Table Shipment {
  id BigInt [pk, increment]
  option String [not null]
  tracking_code String
  status ShipmentStatus [not null, default: 'Pending']
  label_url String
  cost BigInt [not null]
  date_eta DateTime [not null]
  from_address String [not null]
  to_address String [not null]
  weight_grams Int [not null]
  length_cm Int [not null]
  width_cm Int [not null]
  height_cm Int [not null]
  date_created DateTime [default: `now()`, not null]
}

Table Promotion {
  id BigInt [pk, increment]
  code String [unique, not null]
  owner_id BigInt
  ref_type PromotionRefType [not null]
  ref_id BigInt
  type PromotionType [not null]
  title String [not null]
  description String
  is_active Boolean [not null]
  auto_apply Boolean [not null]
  date_started DateTime [not null]
  date_ended DateTime
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Table PromotionSchedule {
  id BigInt [pk, increment]
  promotion_id BigInt [not null]
  timezone String [not null]
  cron_rule String [not null]
  duration Int [not null]
  next_run_at DateTime
  last_run_at DateTime
}

Table PromotionDiscount {
  id BigInt [pk]
  order_wide Boolean [not null]
  min_spend BigInt [not null]
  max_discount BigInt [not null]
  discount_percent Int
  discount_price BigInt
}

Table Resource {
  id BigInt [pk, increment]
  code String [unique, not null]
  uploaded_by BigInt
  provider ResourceProvider [not null]
  mime String [not null]
  file_size BigInt
  width Int
  height Int
  duration Float
  checksum String
  status Status [not null, default: 'Pending']
  created_at DateTime [default: `now()`, not null]
}

Table ResourceReference {
  id BigInt [pk, increment]
  rs_id BigInt [not null]
  ref_type ResourceRefType [not null]
  ref_id BigInt [not null]
  order Int [not null]
  is_primary Boolean [not null]
}

Table ServiceOption {
  id String [pk]
  category String [not null]
  name String [not null]
  description String [not null]
  provider String [not null]
  method String [not null]
  is_active Boolean [not null, default: true]
}

Table SearchSync {
  id BigInt [pk, increment]
  ref_type String [not null]
  ref_id BigInt [not null]
  is_stale_embedding Boolean [not null, default: true]
  is_stale_metadata Boolean [not null, default: true]
  date_created DateTime [default: `now()`, not null]
  date_updated DateTime [default: `now()`, not null]
}

Enum AccountType {
  Customer
  Vendor
}

Enum AccountStatus {
  Active
  Suspended
}

Enum Gender {
  Male
  Female
  Other
}

Enum AddressType {
  Home
  Work
}

Enum InteractionRefType {
  Product
  Article
  Category
  Brand
}

Enum CommentRefType {
  ProductSpu
  Comment
}

Enum StockRefType {
  ProductSku
  Promotion
}

Enum ProductStatus {
  Active
  Inactive
  Sold
  Damaged
}

Enum RefundMethod {
  PickUp
  DropOff
}

Enum InvoiceType {
  Sale
  Service
  Adjustment
}

Enum InvoiceRefType {
  Order
  Fee
}

Enum ShipmentStatus {
  Pending
  LabelCreated
  InTransit
  OutForDelivery
  Delivered
  Failed
  Cancelled
}

Enum PromotionType {
  Discount
  Bundle
  BuyXGetY
  Cashback
}

Enum PromotionRefType {
  All
  ProductSpu
  ProductSku
  Category
  Brand
}

Enum ResourceRefType {
  Account
  ProductSpu
  ProductSku
  Brand
  Refund
  ReturnDispute
  Comment
}

Enum ResourceProvider {
  S3
  Cloudinary
  Local
}

Enum Status {
  Pending
  Processing
  Success
  Canceled
  Failed
}

Ref: Profile.default_contact_id - Contact.id [delete: Set Null]

Ref: Profile.id - Account.id [delete: Cascade]

Ref: Profile.avatar_rs_id - Resource.id [delete: Set Null]

Ref: Customer.id - Account.id [delete: Cascade]

Ref: Vendor.id - Account.id [delete: Cascade]

Ref: IncomeHistory.account_id > Vendor.id [delete: Cascade]

Ref: Notification.account_id > Account.id [delete: Cascade]

Ref: CartItem.cart_id > Customer.id [delete: Cascade]

Ref: CartItem.sku_id > ProductSku.id [delete: No Action]

Ref: Contact.account_id > Account.id [delete: Cascade]

Ref: Interaction.account_id > Customer.id [delete: Cascade]

Ref: ProductSpu.account_id > Vendor.id [delete: Cascade]

Ref: ProductSpu.category_id > ProductCategory.id [delete: Cascade]

Ref: ProductSpu.brand_id > Brand.id [delete: Cascade]

Ref: ProductSku.spu_id > ProductSpu.id [delete: Cascade]

Ref: ProductTag.spu_id > ProductSpu.id [delete: Cascade]

Ref: ProductTag.tag_id > Tag.id [delete: Cascade]

Ref: Comment.account_id > Account.id [delete: Cascade]

Ref: ProductSerial.sku_id > ProductSku.id [delete: Cascade]

Ref: StockHistory.stock_id > Stock.id [delete: Cascade]

Ref: Order.payment_option > ServiceOption.id [delete: No Action]

Ref: Order.account_id > Customer.id [delete: Cascade]

Ref: OrderItem.order_id > Order.id [delete: Cascade]

Ref: OrderItem.sku_id > ProductSku.id [delete: No Action]

Ref: OrderItem.shipment_id > Shipment.id [delete: No Action]

Ref: OrderItem.confirmed_by_id > Vendor.id [delete: Set Null]

Ref: OrderItemSerial.order_item_id > OrderItem.id [delete: Cascade]

Ref: OrderItemSerial.product_serial_id > ProductSerial.id [delete: No Action]

Ref: Refund.order_item_id > OrderItem.id [delete: No Action]

Ref: Refund.reviewed_by_id > Vendor.id [delete: Set Null]

Ref: Refund.shipment_id > Shipment.id [delete: No Action]

Ref: RefundDispute.refund_id > Refund.id [delete: Cascade]

Ref: RefundDispute.issued_by_id > Vendor.id [delete: No Action]

Ref: Invoice.receiver_id > Account.id [delete: No Action]

Ref: Shipment.option > ServiceOption.id [delete: No Action]

Ref: Promotion.owner_id > Vendor.id [delete: Set Null]

Ref: PromotionSchedule.promotion_id > Promotion.id [delete: Cascade]

Ref: PromotionDiscount.id > Promotion.id [delete: Cascade]

Ref: Resource.uploaded_by > Account.id [delete: Set Null]

Ref: ResourceReference.rs_id > Resource.id [delete: Cascade]